# nova-fair-crm

./: README.md  pyproject.toml
nova-fair-crm-fe/: package-lock.json  package.json
nova-fair-crm-fe/public/: index.html
nova-fair-crm-fe/src/: App.js  api.js  useAuth.js
nova-fair-crm-fe/src/components/: CitySelector.js  Copyright.js  CustomInput.tsx  CustomerCreationForm.css  CustomerCreationForm.js  CustomerProfilePage.js  Customers.js  Dashboard.js  LoginPage.js  MatchUserCustomer.js  SigninPage.tsx  TitleBox.tsx  UserList.js  listItems.js  table.css
nova-fair-crm-fe/src/layouts/: MainLayout.tsx
nova-fair-crm-fe/src/routes/: AddCustomers.js  CustomerPage.js  CustomerProfile.js  EditCustomers.js
nova_crm/: db.sqlite3  manage.py
nova_crm/authentication/: views.py
nova_crm/customers/: models.py  serializers.py  urls.py  views.py
nova_crm/customers/migrations/: 0001_initial.py  0002_customer_assigned_employee.py
nova_crm/nova_crm/: asgi.py  settings.py  urls.py  wsgi.py
